Fix netty system properties
Signed-off-by: Rishabh Maurya <rishabhmaurya05@gmail.com>